@@ -23,3 +23,4 @@ To make a SQLite database open terminal in "../Database" and write:
 Also you need to add JavaFx lib to arg path:
 https://openjfx.io/
 
+java -jar --enable-preview  --module-path "**PATH/HERE/javafx-sdk-19/lib**" --add-modules javafx.controls,javafx.fxml,javafx.base,javafx.web --add-exports javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED ticket-reservation.jar
